@@ -307,11 +307,7 @@
 <TD WIDTH="19%" VALIGN="MIDDLE">
 <FONT SIZE=2><P></FONT><A HREF="#permute"><FONT SIZE=2>permute</FONT></A></TD>
 <TD WIDTH="20%" VALIGN="MIDDLE">
-<FONT SIZE=2><P></FONT><A HREF="#pl"><FONT SIZE=2>pl</FONT></A></TD>
-<TD WIDTH="22%" VALIGN="MIDDLE">
 <FONT SIZE=2><P></FONT><A HREF="#plot"><FONT SIZE=2>plot</FONT></A></TD>
-<TD WIDTH="21%" VALIGN="MIDDLE">
-<FONT SIZE=2><P></FONT><A HREF="#polybinout"><FONT SIZE=2>polybinout</FONT></A></TD>
 </TR>
 <TR><TD WIDTH="18%" VALIGN="MIDDLE">
 <FONT SIZE=2><P></FONT><A HREF="#pov"><FONT SIZE=2>pov</FONT></A></TD>
@@ -2395,11 +2391,6 @@ foo.r_xpand/R
 
 </B><FONT SIZE=2><P>-- Create a UNIX plot of the current MGED display and pipe the results to the <I>pldebug</I> command. </P></DIR>
 
-<P><HR ALIGN="RIGHT"></P>
-</FONT><B><DL>
-<DT><A NAME="polybinout"></A>polybinout</B> <I>file</DT>
-</I><DD>Store vlist polygons into polygon file (experimental).</DD>
-</DL>
 <FONT SIZE=2><P><HR ALIGN="RIGHT"></P>
 </FONT><B><DL>
 <DT><A NAME="pov"></A>pov</B> <I>args</DT>
